Fixed small error.

--- a/demo/demo.tex
+++ b/demo/demo.tex
@@ -10,6 +10,6 @@
 
     This is a test. The value is: \dnget{test}.
     Another way to get the value is with the \texttt{dn}-list specified.
-    The value in this case is: \dnget[var]{test}.w
+    The value in this case is: \dnget[var]{test}.
 
 \end{document}
