--- a/dn.dtx
+++ b/dn.dtx
@@ -4,14 +4,10 @@
 % -------------------------------------
 %
 % This file may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License, either version 1.2
-% of this license or (at your option) any later version.
-% The latest version of this license is in:
+% conditions of the MIT License, a version can be found
+% in the GitHub repository:
 %
-%    http://www.latex-project.org/lppl.txt
-%
-% and version 1.2 or later is part of all distributions of LaTeX
-% version 1999/12/01 or later.
+%    https://github.com/opieters/DynamicNumber
 %
 % \fi
 %
