Added reference to UNIX symlinks.

--- a/dynamicnumber.dtx
+++ b/dynamicnumber.dtx
@@ -68,6 +68,9 @@
 % errors resulting from out-of-date numbers by directly setting them in the
 % number generating file and importing a symbolic link in the LaTeX source file.
 %
+% \textbf{Attention!} The name ``symbolic link'' is not related to UNIX symbolic
+% links.
+%
 % \section{Usage}
 %
 % \DescribeMacro{\dndeclare}
