Changed mail address to ctan convention.

--- a/dynamicnumber.dtx
+++ b/dynamicnumber.dtx
@@ -57,7 +57,7 @@
 % \title{The \textsf{dynamicnumber} package\thanks{This document
 %   corresponds to \textsf{dynamicnumber}~\fileversion,
 %   dated \filedate.}}
-% \author{Olivier Pieters \\ \texttt{me@olivierpieters.be}}
+% \author{Olivier Pieters \\ \texttt{me (at) olivierpieters (dot) be}}
 %
 % \maketitle
 %
