Updated version + added \changes entry.

--- a/dynamicnumber.dtx
+++ b/dynamicnumber.dtx
@@ -14,7 +14,7 @@
 % \iffalse
 %<package>\NeedsTeXFormat{LaTeX2e}[1999/12/01]
 %<package>\ProvidesPackage{dynamicnumber}
-%<package>   [2015/10/04 v0.1 Dynamic Number package]
+%<package>   [2015/10/04 v0.1.1 Dynamic Number package]
 %
 %<*driver>
 \documentclass{ltxdoc}
@@ -48,7 +48,8 @@
 %   Right brace   \}     Tilde         \~}
 %
 %
-% \changes{v1.0}{<YYYY>/<MM>/<DD>}{Initial version}
+% \changes{v0.1}{2015/10/04}{Initial version}
+% \changes{v0.1.1}{2015/10/06}{Performance improvements (one call to newread)}
 %
 % \GetFileInfo{dynamicnumber.sty}
 %
