--- a/dynamicnumber.dtx
+++ b/dynamicnumber.dtx
@@ -14,7 +14,7 @@
 % \iffalse
 %<package>\NeedsTeXFormat{LaTeX2e}[1999/12/01]
 %<package>\ProvidesPackage{dynamicnumber}
-%<package>   [2015/10/04 v0.1.1 Dynamic Number package]
+%<package>   [2015/10/27 v0.1.3 Dynamic Number package]
 %
 %<*driver>
 \documentclass{ltxdoc}
@@ -176,6 +176,7 @@
 % \begin{macro}{\dnload}
 % Loads a dn list from file \meta{load}|.dnlist| and executes all commands in
 % this file after a check if the file exists.
+% \changes{v0.1.3}{2015/10/27}{Removed bug where the current list was reset.}
 %    \begin{macrocode}
 \DeclareDocumentCommand{\dnload}{m}{%
     \IfFileExists{#1.dnlist}{%
